--- a/assets/bestseller.css
+++ b/assets/bestseller.css
@@ -58,22 +58,25 @@
   background: #fff;
   text-align: center;
   padding: 0px;
+  min-height: 500px; /* adjust as needed */
+  max-height: 500px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .product-card img {
   width: 100%;
   height: auto;
-  margin-bottom: 10px;
 }
 
 .product-card h4 {
   font-size: 1.2rem;
-  margin: 5px;
 }
 
 .product-card p {
   font-size: 1.2rem;
-  margin: 5px;
 }
 
 
